erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment

== Changelog ==

Date		Added
======
2006/12/28
	* Fixed typo in the Priest Quest [KarLaeda]
2006/12/17
	* Fixed exploit in The Sign Quest [KarLaeda]
2006/12/13
	* Fixed exploit in the Slotted Sunglasses Quest [KarLaeda]
2006/12/11
	* Large Arunafeltz update [Playtester]
	- added spawns and warps
	* Some cleanup & optimization for MvM Arena [KarLaeda]
	- Merged Hunter Job Quest
	* Added Yuno Government Buildings warps. Thanks to $ephiroth [Lupus]
	- Added missing next, removed extra line to Wizard Job Quest
	* Fixed Rogue / Assassin exploit, thanks to El Nino
2006/12/06
	* Minor fix to the sign quest, thanks to theultramage for pointing it out [MasterOfMuppets]
2006/12/01
	* Fixed event's label for many quest-spawned monsters [KarLaeda]
	* Small fix to The Sign Quest [KarLaeda]
	* Removed outdated Thief Bug ID [Playtester]
	- 1017 and 1021 don't exist anymore
2006/11/24
	* Cleaned up global permanent variables in Airship Quest [KarLaeda]
2006/11/23
	* Fixed Mage Tutorial Quest [KarLaeda]
	- Fixed typos in Ninja Quest
2006/11/21
	* Less G_mobs spawning in Odin Temple [Playtester]
2006/11/20
	* Updated Skill Resetter Event, thanks to $ephiroth [KarLaeda]
	* Fixed Sage guest [KarLaeda]
	* Fixed exploit in Shinokas Quest [KarLaeda]
2006/11/17
	* Fixed possible EXP bugs. Look at TRUNK [Lupus]
	- Merged 1st class quests from TRUNK
2006/11/16
	* Fixed wrong label name in adoption NPC [KarLaeda]
	* Added official Ninja Job quest! Thanks to Legionaire for translation [Lupus]
	- Removed name duplicates [Lupus]
	- Merged shops from Trunk
2006/11/13
	* Fixed Swordman Skill Quest (merged correct version form Trunk) [Lupus]
	* Fix for guild manager recognizing [KarLaeda]