@@ -2405,7 +2405,7 @@ int run_func(struct script_state *st)
 
 	end_sp=st->stack->sp;
 	for(i=end_sp-1;i>=0 && st->stack->stack_data[i].type!=C_ARG;i--);
-	if(i==0){
+	if(i<=0){ //Crash fix when missing "push_val" causes current pointer to become -1. from Rayce (jA)
 		if(battle_config.error_log)
 			ShowError("function not found\n");
 //		st->stack->sp=0;
@@ -2891,14 +2891,14 @@ static int script_load_mapreg(void)
 			}
 			p=(char *)aMallocA((strlen(buf2) + 1)*sizeof(char));
 			strcpy(p,buf2);
-			s= add_str((unsigned char *) buf1);
+			s= add_str(buf1);
 			idb_put(mapregstr_db,(i<<24)|s,p);
 		}else{
 			if( sscanf(line+n,"%d",&v)!=1 ){
 				ShowError("%s: %s broken data !\n",mapreg_txt,buf1);
 				continue;
 			}
-			s= add_str((unsigned char *) buf1);
+			s= add_str(buf1);
 			idb_put(mapreg_db,(i<<24)|s,(void*)v);
 		}
 	}
@@ -2932,10 +2932,10 @@ static int script_load_mapreg(void)
 				i = atoi(sql_row[1]);
 				p=(char *)aMallocA((strlen(sql_row[2]) + 1)*sizeof(char));
 				strcpy(p,sql_row[2]);
-				s= add_str((unsigned char *) buf1);
+				s= add_str(buf1);
 				idb_put(mapregstr_db,(i<<24)|s,p);
 			}else{
-				s= add_str((unsigned char *) buf1);
+				s= add_str(buf1);
 				v= atoi(sql_row[2]);
 				i = atoi(sql_row[1]);
 				idb_put(mapreg_db,(i<<24)|s,(void *)v);
@@ -2945,7 +2945,7 @@ static int script_load_mapreg(void)
 	ShowInfo("Freeing results...\n");
 	mysql_free_result(sql_res);
 	mapreg_dirty=0;
-	perfomance = ((unsigned int)time(NULL) - perfomance);
+	perfomance = (((unsigned int)time(NULL)) - perfomance);
 	ShowInfo("SQL Mapreg Loading Completed Under %d Seconds.\n",perfomance);
 	return 0;
 #endif /* TXT_ONLY */
@@ -3749,7 +3749,7 @@ struct script_function buildin_func[] = {
 	{buildin_maprespawnguildid,"maprespawnguildid","sii"},
 	{buildin_agitstart,"agitstart",""},	// <Agit>
 	{buildin_agitend,"agitend",""},
-	{buildin_agitcheck,"agitcheck","i"},   // <Agitcheck>
+	{buildin_agitcheck,"agitcheck",""},   // <Agitcheck>
 	{buildin_flagemblem,"flagemblem","i"},	// Flag Emblem
 	{buildin_getcastlename,"getcastlename","s"},
 	{buildin_getcastledata,"getcastledata","si*"},
@@ -5665,9 +5665,9 @@ int buildin_getpartyname(struct script_state *st)
 	party_id=conv_num(st,& (st->stack->stack_data[st->start+2]));
 	name=buildin_getpartyname_sub(party_id);
 	if(name != NULL)
-		push_str(st->stack,C_STR,(unsigned char *)name);
+		push_str(st->stack,C_STR,name);
 	else
-		push_str(st->stack,C_CONSTSTR, (unsigned char *) "null");
+		push_str(st->stack,C_CONSTSTR,"null");
 
 	return 0;
 }
@@ -5690,19 +5690,19 @@ int buildin_getpartymember(struct script_state *st)
 			if(p->party.member[i].account_id){
 				switch (type) {
 				case 2:
-					mapreg_setreg(add_str((unsigned char *) "$@partymemberaid")+(j<<24),p->party.member[i].account_id);
+					mapreg_setreg(add_str("$@partymemberaid")+(j<<24),p->party.member[i].account_id);
 					break;
 				case 1:
-					mapreg_setreg(add_str((unsigned char *) "$@partymembercid")+(j<<24),p->party.member[i].char_id);
+					mapreg_setreg(add_str("$@partymembercid")+(j<<24),p->party.member[i].char_id);
 					break;
 				default:
-					mapreg_setregstr(add_str((unsigned char *) "$@partymembername$")+(j<<24),p->party.member[i].name);
+					mapreg_setregstr(add_str("$@partymembername$")+(j<<24),p->party.member[i].name);
 				}
 				j++;
 			}
 		}
 	}
-	mapreg_setreg(add_str((unsigned char *) "$@partymembercount"),j);
+	mapreg_setreg(add_str("$@partymembercount"),j);
 
 	return 0;
 }
@@ -5730,7 +5730,7 @@ int buildin_getpartyleader(struct script_state *st)
 		if (type)
 			push_val(st->stack,C_INT,-1);
 		else
-			push_str(st->stack,C_CONSTSTR, (unsigned char *) "null");
+			push_str(st->stack,C_CONSTSTR,"null");
 		return 0;
 	}
 
@@ -5781,9 +5781,9 @@ int buildin_getguildname(struct script_state *st)
 	int guild_id=conv_num(st,& (st->stack->stack_data[st->start+2]));
 	name=buildin_getguildname_sub(guild_id);
 	if(name != NULL)
-		push_str(st->stack,C_STR,(unsigned char *) name);
+		push_str(st->stack,C_STR,name);
 	else
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) "null");
+		push_str(st->stack,C_CONSTSTR,"null");
 	return 0;
 }
 
@@ -5812,9 +5812,9 @@ int buildin_getguildmaster(struct script_state *st)
 	int guild_id=conv_num(st,& (st->stack->stack_data[st->start+2]));
 	master=buildin_getguildmaster_sub(guild_id);
 	if(master!=0)
-		push_str(st->stack,C_STR,(unsigned char *) master);
+		push_str(st->stack,C_STR,master);
 	else
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) "null");
+		push_str(st->stack,C_CONSTSTR,"null");
 	return 0;
 }
 
@@ -6160,7 +6160,7 @@ int buildin_successrefitem(struct script_state *st)
 		clif_misceffect(&sd->bl,3);
 		if(sd->status.inventory[i].refine == MAX_REFINE &&
 			sd->status.inventory[i].card[0] == CARD0_FORGE &&
-		  	sd->status.char_id == MakeDWord(sd->status.inventory[i].card[2],sd->status.inventory[i].card[3])
+		  	sd->status.char_id == (int)MakeDWord(sd->status.inventory[i].card[2],sd->status.inventory[i].card[3])
 		){ // Fame point system [DracoRPG]
 	 		switch (sd->inventory_data[i]->wlv){
 				case 1:
@@ -6746,7 +6746,7 @@ int buildin_gettimestr(struct script_state *st)
 	strftime(tmpstr,maxlen,fmtstr,localtime(&now));
 	tmpstr[maxlen]='\0';
 
-	push_str(st->stack,C_STR,(unsigned char *) tmpstr);
+	push_str(st->stack,C_STR,tmpstr);
 	return 0;
 }
 
@@ -6959,11 +6959,9 @@ int buildin_killmonster_sub(struct block_list *bl,va_list ap)
 	if(!allflag){
 		if(strcmp(event,md->npc_event)==0)
 			status_kill(bl);
-		return 0;
 	}else{
 		if(!md->spawn)
 			status_kill(bl);
-		return 0;
 	}
 	return 0;
 }
@@ -7177,6 +7175,14 @@ int buildin_getnpctimer(struct script_state *st)
 		nd=npc_name2id(conv_str(st,& (st->stack->stack_data[st->start+3])));
 	else
 		nd=(struct npc_data *)map_id2bl(st->oid);
+
+	if (!nd || nd->bl.type != BL_NPC)
+	{
+		push_val(st->stack,C_INT,0);
+		if (battle_config.error_log)
+			ShowError("getnpctimer: Invalid NPC\n");
+		return 1;
+	}
 
 	switch(type){
 	case 0: val=npc_gettimerevent_tick(nd); break;
@@ -8093,13 +8099,13 @@ int buildin_getwaitingroomstate(struct script_state *st)
 	case 33: val=(cd->users >= cd->trigger); break;
 
 	case 4:
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) cd->title);
+		push_str(st->stack,C_CONSTSTR,cd->title);
 		return 0;
 	case 5:
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) cd->pass);
+		push_str(st->stack,C_CONSTSTR,cd->pass);
 		return 0;
 	case 16:
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) cd->npc_event);
+		push_str(st->stack,C_CONSTSTR,cd->npc_event);
 		return 0;
 	}
 	push_val(st->stack,C_INT,val);
@@ -8133,7 +8139,7 @@ int buildin_warpwaitingpc(struct script_state *st)
 		sd=cd->usersd[0];
 		if (!sd) continue; //Broken npc chat room?
 		
-		mapreg_setreg(add_str((unsigned char *) "$@warpwaitingpc")+(i<<24),sd->bl.id);
+		mapreg_setreg(add_str("$@warpwaitingpc")+(i<<24),sd->bl.id);
 
 		if(strcmp(str,"Random")==0)
 			pc_randomwarp(sd,3);
@@ -8146,7 +8152,7 @@ int buildin_warpwaitingpc(struct script_state *st)
 		}else
 			pc_setpos(sd,mapindex_name2id(str),x,y,0);
 	}
-	mapreg_setreg(add_str((unsigned char *) "$@warpwaitingpcnum"),n);
+	mapreg_setreg(add_str("$@warpwaitingpcnum"),n);
 	return 0;
 }
 /*==========================================
@@ -8547,34 +8553,21 @@ int buildin_pvpon(struct script_state *st)
 
 int buildin_pvpoff(struct script_state *st)
 {
-	int m,i,users;
+	int m;
 	char *str;
-	struct map_session_data *pl_sd=NULL, **pl_allsd;
 
 	str=conv_str(st,& (st->stack->stack_data[st->start+2]));
 	m = map_mapname2mapid(str);
-	if(m >= 0 && map[m].flag.pvp) { //fixed Lupus
-		map[m].flag.pvp = 0;
-		clif_send0199(m,0);
+	if(m < 0 || !map[m].flag.pvp)
+		return 0; //fixed Lupus
 
-		if(battle_config.pk_mode) // disable ranking options if pk_mode is on [Valaris]
-			return 0;
+	map[m].flag.pvp = 0;
+	clif_send0199(m,0);
 
-		pl_allsd = map_getallusers(&users);
-		
-		for(i=0;i<users;i++)
-		{
-			if((pl_sd=pl_allsd[i]) && m == pl_sd->bl.m)
-			{
-				clif_pvpset(pl_sd,0,0,2);
-				if(pl_sd->pvp_timer != -1) {
-					delete_timer(pl_sd->pvp_timer,pc_calc_pvprank_timer);
-					pl_sd->pvp_timer = -1;
-				}
-			}
-		}
-	}
-
+	if(battle_config.pk_mode) // disable ranking options if pk_mode is on [Valaris]
+		return 0;
+	
+	map_foreachinmap(buildin_pvpoff_sub, m, BL_PC);
 	return 0;
 }
 
@@ -8693,29 +8686,17 @@ int buildin_agitend(struct script_state *st)
 	guild_agit_end();
 	return 0;
 }
+
 /*==========================================
- * agitcheck 1;    // choice script
- * if(@agit_flag == 1) goto agit;
- * if(agitcheck(0) == 1) goto agit;
+ * Returns whether woe is on or off.	// choice script
  *------------------------------------------
  */
 int buildin_agitcheck(struct script_state *st)
 {
-	struct map_session_data *sd;
-	int cond;
-
-	cond=conv_num(st,& (st->stack->stack_data[st->start+2]));
-
-	if(cond == 0) {
-		if (agit_flag==1) push_val(st->stack,C_INT,1);
-		if (agit_flag==0) push_val(st->stack,C_INT,0);
-	} else {
-		sd=script_rid2sd(st);
-		if (agit_flag==1) pc_setreg(sd,add_str((unsigned char *) "@agit_flag"),1);
-		if (agit_flag==0) pc_setreg(sd,add_str((unsigned char *) "@agit_flag"),0);
-	}
+	push_val(st->stack,C_INT,agit_flag);
 	return 0;
 }
+
 int buildin_flagemblem(struct script_state *st)
 {
 	int g_id=conv_num(st,& (st->stack->stack_data[st->start+2]));
@@ -8730,7 +8711,7 @@ int buildin_flagemblem(struct script_state *st)
 int buildin_getcastlename(struct script_state *st)
 {
 	char *mapname=conv_str(st,& (st->stack->stack_data[st->start+2]));
-	struct guild_castle *gc;
+	struct guild_castle *gc=NULL;
 	int i;
 	for(i=0;i<MAX_GUILDCASTLE;i++){
 		if( (gc=guild_castle_search(i)) != NULL ){
@@ -8740,9 +8721,9 @@ int buildin_getcastlename(struct script_state *st)
 		}
 	}
 	if(gc)
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) gc->castle_name);
+		push_str(st->stack,C_CONSTSTR,gc->castle_name);
 	else
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) "");
+		push_str(st->stack,C_CONSTSTR,"");
 	return 0;
 }
 
@@ -9291,10 +9272,10 @@ int buildin_strmobinfo(struct script_state *st)
 
 	switch (num) {
 	case 1:
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) mob_db(class_)->name);
+		push_str(st->stack,C_CONSTSTR,mob_db(class_)->name);
 		break;
 	case 2:
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) mob_db(class_)->jname);
+		push_str(st->stack,C_CONSTSTR,mob_db(class_)->jname);
 		break;
 	case 3:
 		push_val(st->stack,C_INT,mob_db(class_)->lv);
@@ -9310,6 +9291,9 @@ int buildin_strmobinfo(struct script_state *st)
 		break;
 	case 7:
 		push_val(st->stack,C_INT,mob_db(class_)->job_exp);
+		break;
+	default:
+		push_val(st->stack,C_INT,0);
 		break;
 	}
 	return 0;
@@ -9388,13 +9372,13 @@ int buildin_getitemname(struct script_state *st)
 	i_data = itemdb_exists(item_id);
 	if (i_data == NULL)
 	{
-		push_str(st->stack,C_CONSTSTR,(unsigned char *) "null");
+		push_str(st->stack,C_CONSTSTR,"null");
 		return 0;
 	}
 	item_name=(char *)aMallocA(ITEM_NAME_LENGTH*sizeof(char));
 
 	memcpy(item_name, i_data->jname, ITEM_NAME_LENGTH);
-	push_str(st->stack,C_STR,(unsigned char *) item_name);
+	push_str(st->stack,C_STR,item_name);
 	return 0;
 }
 /*==========================================
@@ -9576,12 +9560,12 @@ int buildin_getinventorylist(struct script_state *st)
 	if(!sd) return 0;
 	for(i=0;i<MAX_INVENTORY;i++){
 		if(sd->status.inventory[i].nameid > 0 && sd->status.inventory[i].amount > 0){
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_id")+(j<<24),sd->status.inventory[i].nameid);
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_amount")+(j<<24),sd->status.inventory[i].amount);
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_equip")+(j<<24),sd->status.inventory[i].equip);
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_refine")+(j<<24),sd->status.inventory[i].refine);
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_identify")+(j<<24),sd->status.inventory[i].identify);
-			pc_setreg(sd,add_str((unsigned char *) "@inventorylist_attribute")+(j<<24),sd->status.inventory[i].attribute);
+			pc_setreg(sd,add_str("@inventorylist_id")+(j<<24),sd->status.inventory[i].nameid);
+			pc_setreg(sd,add_str("@inventorylist_amount")+(j<<24),sd->status.inventory[i].amount);
+			pc_setreg(sd,add_str("@inventorylist_equip")+(j<<24),sd->status.inventory[i].equip);
+			pc_setreg(sd,add_str("@inventorylist_refine")+(j<<24),sd->status.inventory[i].refine);
+			pc_setreg(sd,add_str("@inventorylist_identify")+(j<<24),sd->status.inventory[i].identify);
+			pc_setreg(sd,add_str("@inventorylist_attribute")+(j<<24),sd->status.inventory[i].attribute);
 			for (k = 0; k < MAX_SLOTS; k++)
 			{
 				sprintf(card_var, "@inventorylist_card%d",k+1);
@@ -9590,7 +9574,7 @@ int buildin_getinventorylist(struct script_state *st)
 			j++;
 		}
 	}
-	pc_setreg(sd,add_str((unsigned char *) "@inventorylist_count"),j);
+	pc_setreg(sd,add_str("@inventorylist_count"),j);
 	return 0;
 }
 
@@ -9601,13 +9585,13 @@ int buildin_getskilllist(struct script_state *st)
 	if(!sd) return 0;
 	for(i=0;i<MAX_SKILL;i++){
 		if(sd->status.skill[i].id > 0 && sd->status.skill[i].lv > 0){
-			pc_setreg(sd,add_str((unsigned char *) "@skilllist_id")+(j<<24),sd->status.skill[i].id);
-			pc_setreg(sd,add_str((unsigned char *)"@skilllist_lv")+(j<<24),sd->status.skill[i].lv);
-			pc_setreg(sd,add_str((unsigned char *)"@skilllist_flag")+(j<<24),sd->status.skill[i].flag);
+			pc_setreg(sd,add_str("@skilllist_id")+(j<<24),sd->status.skill[i].id);
+			pc_setreg(sd,add_str("@skilllist_lv")+(j<<24),sd->status.skill[i].lv);
+			pc_setreg(sd,add_str("@skilllist_flag")+(j<<24),sd->status.skill[i].flag);
 			j++;
 		}
 	}
-	pc_setreg(sd,add_str((unsigned char *) "@skilllist_count"),j);
+	pc_setreg(sd,add_str("@skilllist_count"),j);
 	return 0;
 }
 
@@ -10152,9 +10136,9 @@ int buildin_getpetinfo(struct script_state *st)
 				break;
 			case 2:
 				if(pd->pet.name)
-					push_str(st->stack,C_CONSTSTR,(unsigned char *) pd->pet.name);
+					push_str(st->stack,C_CONSTSTR,pd->pet.name);
 				else
-					push_str(st->stack,C_CONSTSTR, (unsigned char *) "null");
+					push_str(st->stack,C_CONSTSTR,"null");
 				break;
 			case 3:
 				push_val(st->stack,C_INT,pd->pet.intimate);
@@ -10253,7 +10237,7 @@ int buildin_select(struct script_state *st)
 			if((int)strlen(st->stack->stack_data[i].u.str) < 1)
 				sd->npc_menu++; //Empty selection which wasn't displayed on the client.
 		}
-		pc_setreg(sd,add_str((unsigned char *) "@menu"),sd->npc_menu);
+		pc_setreg(sd,add_str("@menu"),sd->npc_menu);
 		sd->state.menu_or_input=0;
 		push_val(st->stack,C_INT,sd->npc_menu);
 	}
@@ -10293,7 +10277,7 @@ int buildin_prompt(struct script_state *st)
 					sd->npc_menu++; //Empty selection which wasn't displayed on the client.
 			}
 		}
-		pc_setreg(sd,add_str((unsigned char *) "@menu"),sd->npc_menu);
+		pc_setreg(sd,add_str("@menu"),sd->npc_menu);
 		sd->state.menu_or_input=0;
 		push_val(st->stack,C_INT,sd->npc_menu);
 	  }
@@ -10558,13 +10542,16 @@ int buildin_getsavepoint(struct script_state *st)
 			mapname=(char *) aMallocA((MAP_NAME_LENGTH+1)*sizeof(char));
 			memcpy(mapname, mapindex_id2name(sd->status.save_point.map), MAP_NAME_LENGTH);
 			mapname[MAP_NAME_LENGTH]='\0';
-			push_str(st->stack,C_STR,(unsigned char *) mapname);
+			push_str(st->stack,C_STR,mapname);
 		break;
 		case 1:
 			push_val(st->stack,C_INT,x);
 		break;
 		case 2:
 			push_val(st->stack,C_INT,y);
+		break;
+		default:
+			push_val(st->stack,C_INT,0);
 		break;
 	}
 	return 0;
@@ -11018,6 +11005,8 @@ int buildin_getrefine(struct script_state *st)
 	struct map_session_data *sd;
 	if ((sd = script_rid2sd(st))!= NULL)
 		push_val(st->stack, C_INT, sd->status.inventory[current_equip_item_index].refine);
+	else
+		push_val(st->stack,C_INT,0);
 	return 0;
 }
 
@@ -11112,9 +11101,9 @@ int buildin_setbattleflag(struct script_state *st){
 	value = conv_str(st,& (st->stack->stack_data[st->start+3]));
 	
 	if (battle_set_value(flag, value) == 0)
-		ShowWarning("buildin_setbattleflag: unknown battle_config flag '%s'",flag);
+		ShowWarning("buildin_setbattleflag: unknown battle_config flag '%s'\n",flag);
 	else
-		ShowInfo("buildin_setbattleflag: battle_config flag '%s' is now set to '%s'.",flag,value);
+		ShowInfo("buildin_setbattleflag: battle_config flag '%s' is now set to '%s'.\n",flag,value);
 
 	return 0;
 }
@@ -11241,7 +11230,7 @@ int buildin_checkcell(struct script_state *st){
 // [zBuffer] List of dynamic var commands --->
 void setd_sub(struct script_state *st, struct map_session_data *sd, char *varname, int elem, void *value, struct linkdb_node **ref)
 {
-	set_reg(st, sd, add_str((unsigned char *) varname)+(elem<<24), varname, value, ref);
+	set_reg(st, sd, add_str(varname)+(elem<<24), varname, value, ref);
 	return;
 }
 
@@ -11354,7 +11343,7 @@ int buildin_escape_sql(struct script_state *st) {
 	
 	t_query = aMallocA((strlen(query)*2+1)*sizeof(char));
 	jstrescapecpy(t_query,query);
-	push_str(st->stack,C_STR,(unsigned char *)t_query);
+	push_str(st->stack,C_STR,t_query);
 	return 0;
 }
 
@@ -11370,7 +11359,7 @@ int buildin_getd (struct script_state *st)
 		elem = 0;
 
 	/*dat.type=C_NAME;
-	dat.u.num=add_str((unsigned char *) varname)+(elem<<24);
+	dat.u.num=add_str(varname)+(elem<<24);
 	get_val(st,&dat);
 
 	if(dat.type == C_INT)
@@ -11384,7 +11373,7 @@ int buildin_getd (struct script_state *st)
 
 	// Push the 'pointer' so it's more flexible [Lance]
 	push_val(st->stack,C_NAME,
-				(elem<<24) | add_str((unsigned char *) varname));
+				(elem<<24) | add_str(varname));
 
 	return 0;
 }
@@ -11659,7 +11648,7 @@ int buildin_getmonsterinfo(struct script_state *st)
 	mob = mob_db(mob_id);
 	switch ( conv_num(st,& (st->stack->stack_data[st->start+3])) ) {
 		case 0: //Name
-			push_str(st->stack,C_CONSTSTR, (unsigned char *) mob->jname);
+			push_str(st->stack,C_CONSTSTR, mob->jname);
 			break;
 		case 1: //Lvl
 			push_val(st->stack,C_INT, mob->lv);
